fix: change header height on small pc

--- a/src/ServiceStation/css/header.css
+++ b/src/ServiceStation/css/header.css
@@ -39,6 +39,13 @@
   color: #464646;
 }
 
+/* PC */
+@media (max-width: 1426px) {
+  .header__container {
+    min-height: 150px;
+  }
+}
+
 /* TABLET */
 @media (max-width: 991.98px) {
   .header__container {
